fixing spacing on article titles

--- a/style.css
+++ b/style.css
@@ -1649,6 +1649,7 @@ ul {
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 100%;
+  margin-bottom: 0;
 }
 @media (min-width: 768px) {
   .article-title {
